--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HappyGardens</title>
+    <title>Happy Gardens</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c5e90b">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Happy Gardens</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <div class="navbar-nav me-auto">
+            <%# <button class="btn btn-sm btn-outline-success" type="button">Main button</button> %>
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">View Listings</a>
+            <a class="nav-link" href="#">Create Listing</a>
+            <!-- TODO: add if statement for account or sign in -->
+            <%# <a class="nav-link" href="#">Sign In</a> %>
+          </div>
+
+          <button class="btn btn-outline-success" type="submit">Sign In</button>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
