--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -12,6 +12,15 @@
         <span class="input-group-text">$</span>
         <%= f.number_field :price, in: 0..1000, step: 0.01, class: 'form-control' %>
     </fieldset>
+    <% if @listing.cover_image.attached? %>
+        <fieldset class="mb-2">
+        <%= cl_image_tag @listing.cover_image.key, transformation: ["media_lib_thumb"], cloud_name: ENV['CLOUDINARY_CLOUD_NAME'] %>
+        </fieldset>
+    <% end %>
+    <fieldset class="mb-2">
+        <%= f.label :cover_image %>
+        <%= f.file_field :cover_image %>
+    </fieldset>
     <fieldset>
         <%= f.submit class: "btn btn-primary btn-sm" %>
     </fieldset>
