--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @listing.name %></h1>
 <p><%= @listing.description %></p>
 <p><%= @listing.price %></p>
+<%= cl_image_tag(@listing.cover_image.key, crop: :scale, width: 150, cloud_name: ENV['CLOUDINARY_CLOUD_NAME']) if @listing.cover_image.attached? %>
 
 <% if policy(@listing).edit_or_destroy? && current_user.id == @listing.user_id %>
     <div class="btn-toolbar mt-3">
