--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,122 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="form-panel mx-auto">
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :first_name %>
+      </div>
+      <div class="col">
+        <%= f.text_field :first_name, autofocus: true, autocomplete: "given-name", class:"form-control" %>
+      </div>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :last_name %>
+      </div>
+      <div class="col">
+        <%= f.text_field :last_name, autocomplete: "family-name", class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :email %>
+      </div>
+      <div class="col">
+        <%= f.email_field :email, autofocus: true, class:"form-control" %>
+      </div>
+    </div>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :address %>
+      </div>
+      <div class="col">
+        <%= f.email_field :address, class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :phone_number %>
+      </div>
+      <div class="col">
+        <%= f.telephone_field :phone_number, autocomplete: "tel", class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :password %>
+      </div>
+      <div class="col">
+        <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col-3"></div>
+      <div class="col">
+        <i>(leave password blank if you don't want to change it)</i>
+      </div>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        Confirm password
+      </div>
+      <div class="col">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :current_password %>
+      </div>
+      <div class="col">
+        <%= f.password_field :current_password, autocomplete: "current-password", class:"form-control" %>
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <div class="col-3"></div>
+      <div class="col">
+        <i>(we need your current password to confirm your changes)</i>
+      </div>
+    </div>
+
+    <div class="row">
+    <div class="col"></div>
+    <div class="col">
+      <%= f.submit "Update", class: "btn btn-primary" %>
+    </div>
+    </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+  <h3>Cancel my account</h3>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+  <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">
+    Delete Account
+  </button>
+</div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+<!-- Modal -->
+<%= render partial: 'shared/modal', locals: {
+  id: 'deleteAccountModal', 
+  title: 'Delete Account?', 
+  body: "Are you sure you want to delete your account?", 
+  button_text: 'Delete',
+  model: registration_path(resource_name),
+  button_class: 'btn btn-danger',
+  method: :delete
+} %>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
