--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,50 +1,82 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "given-name" %>
+<div class="form-panel mx-auto">
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col">
+      <h1>Sign Up</h1>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autocomplete: "family-name" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :phone_number %><br />
-    <%= f.telephone_field :phone_number, autocomplete: "tel" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <%# TODO: Investigate potential use of address search api (google) %>
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address, autocomplete: "street-address" %>
-  </div>
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :first_name %><br />
+      </div>
+      <div class="col">
+        <%= f.text_field :first_name, autofocus: true, autocomplete: "given-name", class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :last_name %><br />
+      </div>
+      <div class="col">
+        <%= f.text_field :last_name, autocomplete: "family-name", class: "form-control" %>
+      </div>
+    </div>
+    
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :phone_number %><br />
+      </div>
+      <div class="col">
+        <%= f.telephone_field :phone_number, autocomplete: "tel", class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <%# TODO: Investigate potential use of address search api (google) %>
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :address %><br />
+      </div>
+      <div class="col">
+        <%= f.text_field :address, autocomplete: "street-address", class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :email %><br />
+      </div>
+      <div class="col">
+        <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="row mb-2">  
+      <div class="col-3 my-auto text-end">
+        <%= f.label :password %>
+      </div>
+      <div class="col">
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      </div>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="row mb-2">
+      <div class="col-3 my-auto text-end">
+        <%= f.label :password_confirmation %>
+      </div>
+      <div class="col">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col text-center">
+        <%= f.submit "Sign up", class: "btn btn-success" %>
+      </div>
+    </div>
+  <% end %>
+</div>
