--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,11 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
 
   <body>
-    <%# TODO: Make navbar into a partial render %>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c5e90b">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Happy Gardens</a>
@@ -22,28 +21,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav me-auto">
-            <%# <button class="btn btn-sm btn-outline-success" type="button">Main button</button> %>
             <%= link_to 'Home', '/', class: 'nav-link' %>
             <%= link_to 'View Listings', '/listings', class: 'nav-link' %>
             <%= link_to 'Create Listing', '/listings/new', class: 'nav-link' %>
-            <!-- TODO: add if statement for account or sign in -->
-            <%# <a class="nav-link" href="#">Sign In</a> %>
           </div>
 
           <% if user_signed_in? %>
-            <div class="ml-auto btn-toolbar p-3">
-              Welcome, <%= current_user.first_name.capitalize %>!
+            <div class="btn-toolbar">
+              </i>Welcome, <%= current_user.first_name.capitalize %>!
             </div>
-            <div class="ml-auto btn-toolbar">
+            <div class="ms-2 btn-toolbar">
+              <%= link_to raw("<i class=\"bi bi-person-circle\"></i>"), edit_user_registration_path, class: 'btn btn-success' %>
+            </div>
+            <div class="ms-2 btn-toolbar">
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#logoutModal">
                 Logout
               </button>
             </div>
           <% else %>
-            <div class="ml-auto btn-toolbar p-3">
+            <div class="btn-toolbar">
               <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-secondary' %>
             </div>
-            <div class="ml-auto btn-toolbar">
+            <div class="ms-2 btn-toolbar">
               <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
             </div>
           <% end %>
@@ -52,27 +51,27 @@
       </div>
     </nav>
 
-    <main class="p-3">
-      <% if notice %>
-        <p class="alert alert-info notice" role='alert'><%= notice.html_safe %></p>
-      <% end %>
-      <% if alert %>
-        <p class="alert alert-danger" role='alert'><%= alert.html_safe %></p>
-      <% end %>
+    <% if notice %>
+      <p class="alert alert-info notice m-3" role='alert'><%= notice.html_safe %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger m-3" role='alert'><%= alert.html_safe %></p>
+    <% end %>
+
+    <main class="container pt-2">
       <%= yield %>
     </main>
+    <!-- Modal -->
+    <% if user_signed_in? %>
+        <%= render partial: 'shared/modal', locals: {
+          id: 'logoutModal', 
+            title: 'Logout?', 
+            body: "Are you sure you want to logout, #{current_user.first_name.capitalize}?", 
+            button_text: 'Logout',
+            model: destroy_user_session_path,
+            button_class: 'btn btn-primary',
+            method: :delete
+        } %>
+    <% end %>
   </body>
 </html>
-
-<!-- Modal -->
-<% if user_signed_in? %>
-    <%= render partial: 'shared/modal', locals: {
-        id: 'logoutModal', 
-        title: 'Logout?', 
-        body: "Are you sure you want to logout, #{current_user.first_name.capitalize}?", 
-        button_text: 'Logout',
-        model: destroy_user_session_path,
-        button_class: 'btn btn-primary',
-        method: :delete
-    } %>
-<% end %>
