--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit Listing</h1>
-
-<%= render 'form' %>
+<div class="form-panel mx-auto">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col">
+            <h1>Edit Listing</h1>
+        </div>
+    </div>
+    <%= render 'form' %>
+</div>
