--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
             <%= link_to 'Home', '/', class: 'nav-link' %>
             <%= link_to 'View Listings', '/listings', class: 'nav-link' %>
             <%= link_to 'Create Listing', '/listings/new', class: 'nav-link' %>
+            <%= link_to 'My Transactions', '/my-transactions', class: 'nav-link' if user_signed_in? %>
           </div>
 
           <% if user_signed_in? %>
