Added comments and refactored code

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Listings</h1>
 
+<%# Render all listings (available) %>
 <div class="d-flex flex-wrap justify-content-center">
     <% @listings.each do |listing| %>
         <div class="card m-3 listing-card">
