--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,78 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Happy Gardens</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <head>
+        <title>Happy Gardens</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <%= csrf_meta_tags %>
+        <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+        <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+        <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  </head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c5e90b">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Happy Gardens</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-          <div class="navbar-nav me-auto">
-            <%= link_to 'Home', '/', class: 'nav-link' %>
-            <%= link_to 'View Listings', '/listings', class: 'nav-link' %>
-            <%= link_to 'Create Listing', '/listings/new', class: 'nav-link' %>
-            <%= link_to 'My Transactions', '/my-transactions', class: 'nav-link' if user_signed_in? %>
-          </div>
+    <body>
+        <%# Navbar that is rendered on every page %>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c5e90b">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Happy Gardens</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <div class="navbar-nav me-auto">
+                        <%= link_to 'Home', '/', class: 'nav-link' %>
+                        <%= link_to 'View Listings', '/listings', class: 'nav-link' %>
+                        <%= link_to 'Create Listing', '/listings/new', class: 'nav-link' %>
+                        <%= link_to 'My Transactions', '/my-transactions', class: 'nav-link' if user_signed_in? %>
+                    </div>
 
-          <% if user_signed_in? %>
-            <div class="btn-toolbar">
-              </i>Welcome, <%= current_user.first_name.capitalize %>!
+                    <% if user_signed_in? %>
+                        <div class="btn-toolbar">
+                            </i>Welcome, <%= current_user.first_name.capitalize %>!
+                        </div>
+                        <div class="ms-2 btn-toolbar">
+                            <%= link_to raw("<i class=\"bi bi-person-circle\"></i>"), edit_user_registration_path, class: 'btn btn-success' %>
+                        </div>
+                        <div class="ms-2 btn-toolbar">
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                Logout
+                            </button>
+                        </div>
+                    <% else %>
+                        <div class="btn-toolbar">
+                            <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-secondary' %>
+                        </div>
+                        <div class="ms-2 btn-toolbar">
+                            <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
+                        </div>
+                    <% end %>
+
+                </div>
             </div>
-            <div class="ms-2 btn-toolbar">
-              <%= link_to raw("<i class=\"bi bi-person-circle\"></i>"), edit_user_registration_path, class: 'btn btn-success' %>
-            </div>
-            <div class="ms-2 btn-toolbar">
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#logoutModal">
-                Logout
-              </button>
-            </div>
-          <% else %>
-            <div class="btn-toolbar">
-              <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-secondary' %>
-            </div>
-            <div class="ms-2 btn-toolbar">
-              <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
-            </div>
-          <% end %>
+        </nav>
 
-        </div>
-      </div>
-    </nav>
+        <%# Flash Messages %>
+        <% if notice %>
+            <p class="alert alert-info notice m-3" role='alert'><%= notice.html_safe %></p>
+        <% end %>
+        <% if alert %>
+            <p class="alert alert-danger m-3" role='alert'><%= alert.html_safe %></p>
+        <% end %>
 
-    <% if notice %>
-      <p class="alert alert-info notice m-3" role='alert'><%= notice.html_safe %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger m-3" role='alert'><%= alert.html_safe %></p>
-    <% end %>
+        <%# The view the controller renders %>
+        <main class="container pt-2">
+            <%= yield %>
+        </main>
 
-    <main class="container pt-2">
-      <%= yield %>
-    </main>
-    <!-- Modal -->
-    <% if user_signed_in? %>
-        <%= render partial: 'shared/modal', locals: {
-          id: 'logoutModal', 
-            title: 'Logout?', 
-            body: "Are you sure you want to logout, #{current_user.first_name.capitalize}?", 
-            button_text: 'Logout',
-            model: destroy_user_session_path,
-            button_class: 'btn btn-primary',
-            method: :delete
-        } %>
-    <% end %>
-  </body>
+        <%# Logout confirmation modal %>
+        <% if user_signed_in? %>
+                <%= render partial: 'shared/modal', locals: {
+                    id: 'logoutModal', 
+                        title: 'Logout?', 
+                        body: "Are you sure you want to logout, #{current_user.first_name.capitalize}?", 
+                        button_text: 'Logout',
+                        model: destroy_user_session_path,
+                        button_class: 'btn btn-primary',
+                        method: :delete
+                } %>
+        <% end %>
+    </body>
 </html>
