--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,3 +1,4 @@
+<%# Reusable form (for edit/new) %>
 <%= form_with(model: @listing, data: {turbo: false}) do |f| %>
     <div class="row mb-2">
         <div class="col-3 text-end my-auto">
